--- a/blocks/cards/__subscribe/cards__subscribe.css
+++ b/blocks/cards/__subscribe/cards__subscribe.css
@@ -1,6 +1,7 @@
 .cards__subscribe {
-  padding: 0 21px;
+  padding: 25px 21px 31px;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
