--- a/blocks/cards/__places-name/cards__places-name.css
+++ b/blocks/cards/__places-name/cards__places-name.css
@@ -1,5 +1,4 @@
 .cards__places-name {
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
@@ -9,4 +8,5 @@
     white-space: nowrap;
     overflow: hidden;
     max-width: 180px;
+    margin: 0;
   }
