--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,9 @@
 .header {
-  padding: 45px 0 41px;
+  max-width: 880px;
+  margin: 0 auto;
+  padding: 45px 19px 41px;
   border-bottom: 1px solid #545454;
+
 }
 @media (max-width: 768px) {
   .header {
