--- a/blocks/popap/__close/popap__close.css
+++ b/blocks/popap/__close/popap__close.css
@@ -4,6 +4,9 @@
     right: -25px;
     cursor: pointer;
   }
+  .popap__close:hover{
+    opacity: 0.5;
+  }
   @media (max-width: 684px){
     .popap__close{
         right: 0;
