--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -5,9 +5,10 @@
   height: 120px;
   object-fit: cover;
   margin: 0 30px 0 0;
+  align-self: flex-start;
 }
 @media (max-width: 768px) {
   .profile__avatar {
-    margin: 0;
+    margin: 0 0 22px;
   }
 }
