--- a/blocks/profile/__btn/profile__btn.css
+++ b/blocks/profile/__btn/profile__btn.css
@@ -2,6 +2,9 @@
     border: 2px solid #ffffff;
     border-radius: 2px;
   }
+  .profile__btn:hover{
+    opacity: 0.5;
+  }
   @media (max-width: 768px){
     
   }
