--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,15 +1,16 @@
 .profile__info {
   display: grid;
-  grid-template-columns: 1fr auto;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: fit-content(300px) min-content;
+  grid-template-rows: repeat(2, min-content);
   gap: 16px 18px;
 }
 @media (max-width: 768px) {
   .profile__info {
-    margin: 0;
+    margin: 0 0 36px;
     padding-left: 22px;
-    grid-template-columns: max-content auto;
+    grid-template-columns: 1fr min-content;
     gap: 14px 10px;
+    text-align: center;
   }
 
 }
