--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  padding: 26px 19px 0;
+  padding: 26px 0 0;
   display: grid;
   grid-template-rows: 1fr;
   grid-template-columns: min-content max-content 1fr;
@@ -11,9 +11,9 @@
 @media (max-width: 768px) {
   .profile {
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     justify-items: center;
     align-items: center;
-    padding: 38px 19px 0;
+    padding: 38px 0 0;
   }
 }
