--- a/blocks/cards/__likes/_colorFon/_black/cards__likes_colorFon_black.css
+++ b/blocks/cards/__likes/_colorFon/_black/cards__likes_colorFon_black.css
@@ -1,6 +1,12 @@
 .cards__likes_colorFon_black{
+  background-image: url(../../../../../img/likeBlack.svg)
+}
+.cards__likes_colorFon_black:hover{
+  opacity: 1;
+}
+/* .cards__likes_colorFon_black{
     fill: black;
   }
   .cards__likes_colorFon_black:hover{
     stroke-opacity: 1;
-  }
+  } */
