--- a/blocks/cards/__likes/cards__likes.css
+++ b/blocks/cards/__likes/cards__likes.css
@@ -1,4 +1,16 @@
 .cards__likes{
+  width: 22px;
+  height: 19px;
+  background-image: url(../../../img/likes.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+.cards__likes:hover{
+  opacity: 0.5;
+} 
+
+/* .cards__likes{
     fill: none;
     stroke: black;
     stroke-width: 1.5;
@@ -7,4 +19,4 @@
   }
   .cards__likes:hover{
     stroke-opacity: 0.5;
-  }
+  } */
