--- a/blocks/popap/popap.css
+++ b/blocks/popap/popap.css
@@ -1,11 +1,9 @@
 .popap {
   position: fixed;
-  top: -100%;
-  left: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 }
