--- a/blocks/cards/__subscribe/cards__subscribe.css
+++ b/blocks/cards/__subscribe/cards__subscribe.css
@@ -1,5 +1,6 @@
 .cards__subscribe {
-  padding: 25px 21px 31px;
+  /* padding: 25px 21px 31px; */
+  padding: 25px 20px 25px;
   background-color: #fff;
   display: flex;
   justify-content: space-between;
