--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,12 +1,17 @@
 .header {
   max-width: 880px;
   margin: 0 auto;
-  padding: 45px 19px 41px;
-  border-bottom: 1px solid #545454;
-
+  padding: 45px 0px 41px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
+
+
 @media (max-width: 768px) {
   .header {
-    padding: 28px 27px 31px;
+    margin: 0;
+    width: 103px;
+    height: 24px;
+    padding: 35px 25px 31px;
   }
+  
 }
