--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -4,6 +4,11 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  align-self: self-start;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 300px;
 }
 @media (max-width: 768px) {
   .profile__job {
@@ -14,5 +19,6 @@
   .profile__job {
     font-size: 14px;
     line-height: 17px;
+    padding-left: 5px;
   }
 }
