--- a/pages/index.css
+++ b/pages/index.css
@@ -16,6 +16,7 @@
 
 
 @import url('../blocks/header/header.css');
+@import url('../blocks/header/_logo/header__logo.css');
 
 @import url('../blocks/profile/profile.css');
 @import url('../blocks/profile/__avatar/profile__avatar.css');
