--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,17 +1,17 @@
 .popup {
-  padding-top: 10px;
+  padding: 190px 0;
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   top: 0;
   right: 0;
 }
 @media (max-width: 320px) {
   .popup {
-    padding: 0;
+    padding: 120px 0;
   }
 }
