--- a/blocks/profile/__btn/_type/profile__btn_type_add.css
+++ b/blocks/profile/__btn/_type/profile__btn_type_add.css
@@ -13,6 +13,6 @@
 @media (max-width: 450px) {
   .profile__btn_type_add {
     width: 100%;
-    background: url(../../../../img/MobileAdd.svg) no-repeat center;
+    background-size: 16px;
   }
 }
