--- a/blocks/profile/__btn/_type/profile__btn_type_edit.css
+++ b/blocks/profile/__btn/_type/profile__btn_type_edit.css
@@ -3,7 +3,7 @@
   height: 24px;
   margin: 2px 0 0 3px;
   position: relative;
-  background: url(../../../../img/edit.svg) no-repeat center;
+  background: url(../../../../img/EditButton.svg) no-repeat center;
   align-self: center;
   border-radius: 0;
 }
@@ -17,6 +17,6 @@
     width: 18px;
     height: 18px;
     margin: 8px 0 0;
-    background: url(../../../../img/EditMobile.svg) no-repeat center;
+    background-size: 18px;
   }
 }
