--- a/blocks/cards/__photo-places/cards__photo-places.css
+++ b/blocks/cards/__photo-places/cards__photo-places.css
@@ -1,5 +1,6 @@
 .cards__photo-places {
   max-width: 100%;
-  max-height: 100%;
-  object-fit: contain;
+  height: 100%;
+  object-fit: cover;
+  aspect-ratio: 1/1; 
 }
