--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
   gap: 20px 16px;
   padding-top: 47px;
 }
