--- a/pages/index.css
+++ b/pages/index.css
@@ -33,8 +33,10 @@
 @import url('../blocks/cards/__places-name/cards__places-name.css');
 @import url('../blocks/cards/__photo-places/cards__photo-places.css');
 @import url('../blocks/cards/__like/cards__like.css');
-@import url('../blocks/cards/__like/_active/cards__like_active_true.css');
+@import url('../blocks/cards/__like/_active/cards__like_active.css');
 
 
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
+
+/* Я все это время не правильно пользовался PixelPerfect.....*/
