--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,7 @@
 @import url('../blocks/input/input.css');
 
 @import url('../blocks/popup/popup.css');
+@import url('../blocks/popup/__img-block/popup__img-block.css');
 @import url('../blocks/popup/_active/popup_active.css');
 @import url('../blocks/popup/__content/popup__content.css');
 @import url('../blocks/popup/__form/popup__form.css');
@@ -13,6 +14,7 @@
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__btn/popup__btn.css');
+@import url('../blocks/popup/__photo/popup__photo.css');
 
 
 @import url('../blocks/header/header.css');
@@ -32,6 +34,7 @@
 @import url('../blocks/cards/__subscribe/cards__subscribe.css');
 @import url('../blocks/cards/__places-name/cards__places-name.css');
 @import url('../blocks/cards/__photo-places/cards__photo-places.css');
+@import url('../blocks/cards/__delete/cards__delete.css');
 @import url('../blocks/cards/__like/cards__like.css');
 @import url('../blocks/cards/__like/_active/cards__like_active.css');
 
@@ -39,4 +42,3 @@
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__copyright/footer__copyright.css');
 
-/* Я все это время не правильно пользовался PixelPerfect.....*/
