--- a/blocks/popup/_type/popup_type_img-block.css
+++ b/blocks/popup/_type/popup_type_img-block.css
@@ -1,6 +1,5 @@
 .popup_type_img-block {
     position: absolute;
-    /* visibility: visible;
-    opacity: 1; */
     position: fixed;
+    background-color: rgba(0, 0, 0, 0.9);
   }
