--- a/pages/index.css
+++ b/pages/index.css
@@ -9,12 +9,14 @@
 @import url('../blocks/popup/_type/popup_type_img-block.css');
 @import url('../blocks/popup/_active/popup_active.css');
 @import url('../blocks/popup/__content/popup__content.css');
+@import url('../blocks/popup/__content/_type/popup__content_type_img-block.css');
 @import url('../blocks/popup/__form/popup__form.css');
 @import url('../blocks/popup/__close/popup__close.css');
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__btn/popup__btn.css');
 @import url('../blocks/popup/__photo/popup__photo.css');
+@import url('../blocks/popup/__subtitle/popup__subtitle.css');
 
 
 @import url('../blocks/header/header.css');
