--- a/pages/index.css
+++ b/pages/index.css
@@ -11,10 +11,14 @@
 @import url('../blocks/popup/__content/popup__content.css');
 @import url('../blocks/popup/__content/_type/popup__content_type_img-block.css');
 @import url('../blocks/popup/__form/popup__form.css');
+@import url('../blocks/popup/__field/popup__field.css');
 @import url('../blocks/popup/__close/popup__close.css');
+@import url('../blocks/popup/__input-error/form__input-error.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/type/popup__input_type_error.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__btn/popup__btn.css');
+@import url('../blocks/popup/__btn/type/popup__btn_type_disabled.css');
 @import url('../blocks/popup/__photo/popup__photo.css');
 @import url('../blocks/popup/__subtitle/popup__subtitle.css');
 
