--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -27,7 +27,9 @@
 @import url('../blocks/header/__logo/header__logo.css');
 
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__block-avatar/profile__block-avatar.css');
 @import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__edit-profile/profile__edit-profile.css');
 @import url('../blocks/profile/__info/profile__info.css');
 @import url('../blocks/profile/__job/profile__job.css');
 @import url('../blocks/profile/__name/profile__name.css');
@@ -43,6 +45,7 @@
 @import url('../blocks/cards/__delete/cards__delete.css');
 @import url('../blocks/cards/__like/cards__like.css');
 @import url('../blocks/cards/__like/_active/cards__like_active.css');
+@import url('../blocks/cards/__like-counter/cards__like-counter.css');
 
 
 @import url('../blocks/footer/footer.css');
