--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -1,14 +1,9 @@
 .popup__form {
-  padding: 31px 33px 37px 36px;
-  min-width: 430px;
+  /* padding: 31px 33px 37px 36px;
+  min-width: 430px; */
   box-sizing: border-box;
   border: none;
   display: flex;
   flex-direction: column;
 }
-@media (max-width: 684px) {
-  .popup__form {
-    min-width: 282px;
-    padding: 25px 21px 25px 22px;
-  }
-}
+
