--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -6,6 +6,14 @@
   object-fit: cover;
   margin: 0 29px 0 0;
   align-self: flex-start;
+
+
+}
+.profile__avatar:hover{
+  cursor: pointer;
+  background-image: url(../../../img/pencil.svg);
+  background-color: #c40e0e;
+  z-index: 1000;
 }
 @media (max-width: 768px) {
   .profile__avatar {
